gitops/dep-n8n.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  labels:
    app: n8n
spec:
  replicas: 3
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - name: n8n
          image: codersdiary/n8n:v1
          ports:
            - containerPort: 5678

          volumeMounts:
            - name: n8n-storage
              mountPath: /home/node/.n8n

      volumes:
        - name: n8n-storage
          emptyDir: {}
