gitops/svc-codersdiary.yml
apiVersion: v1
kind: Service
metadata:
  name: codersdiary-service
spec:
  type: ClusterIP
  selector:
    app: codersdiary   # ⚠️ must match your deployment labels
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
