gitops/svc-ror.yml
apiVersion: v1
kind: Service
metadata:
  name: ror-service
spec:
  type: ClusterIP
  selector:
    app: ror   #i ⚠️ must match your deployment labels
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
