gitops/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
      - codersdiary.online
      - n8n.codersdiary.online
      - ror.codersdiary.online
    secretName: tls-secret
  rules:
    - host: codersdiary.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codersdiary-service
                port:
                  number: 80

    - host: ror.codersdiary.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ror-service
                port:
                  number: 80

    - host: n8n.codersdiary.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-service
                port:
                  number: 80
